--- a/workOrders.html
+++ b/workOrders.html
@@ -22,15 +22,16 @@
       .container {
         max-width: 1400px;
         margin: 0 auto;
-      }
-
-      .header {
         background: white;
         padding: 30px;
         border-radius: 12px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      }
+
+      .header {
+        padding-bottom: 20px;
+        border-bottom: 2px solid #f7fafc;
         margin-bottom: 30px;
-        border-left: 4px solid #3b82f6;
       }
 
       h1 {
@@ -44,30 +45,36 @@
         font-size: 16px;
       }
 
-      .work-orders-grid {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-        gap: 25px;
-        margin-bottom: 30px;
+      .work-orders-list {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
       }
 
       .work-order-card {
-        background: white;
+        background: #f7fafc;
         border-radius: 12px;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        border: 2px solid #e2e8f0;
         overflow: hidden;
         transition: all 0.3s ease;
-        cursor: pointer;
       }
 
       .work-order-card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
+        border-color: #cbd5e0;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
       }
 
-      .work-order-header {
+      .work-order-content {
         padding: 20px;
-        border-bottom: 2px solid #f7fafc;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: wrap;
+      }
+
+      .work-order-info {
+        flex: 1;
+        min-width: 250px;
       }
 
       .work-order-name {
@@ -85,34 +92,37 @@
         gap: 5px;
       }
 
-      .work-order-body {
-        padding: 20px;
-      }
-
       .work-order-stats {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
+        display: flex;
         gap: 15px;
-        margin-bottom: 15px;
       }
 
       .mini-stat {
         text-align: center;
-        padding: 12px;
-        background: #f7fafc;
+        padding: 12px 16px;
+        background: white;
         border-radius: 8px;
+        border: 1px solid #e2e8f0;
       }
 
       .mini-stat-value {
-        font-size: 24px;
+        font-size: 20px;
         font-weight: bold;
         color: #3b82f6;
       }
 
       .mini-stat-label {
-        font-size: 12px;
+        font-size: 11px;
         color: #718096;
         margin-top: 4px;
+        text-transform: uppercase;
+        letter-spacing: 0.5px;
+      }
+
+      .work-order-status {
+        display: flex;
+        align-items: center;
+        gap: 10px;
       }
 
       .status-badge {
@@ -123,6 +133,7 @@
         font-weight: 600;
         text-transform: uppercase;
         letter-spacing: 0.5px;
+        white-space: nowrap;
       }
 
       .status-approved {
@@ -143,11 +154,10 @@
       .work-order-actions {
         display: flex;
         gap: 10px;
-        margin-top: 15px;
+        margin-left: auto;
       }
 
       .btn {
-        flex: 1;
         padding: 10px 20px;
         border: none;
         border-radius: 8px;
@@ -158,6 +168,7 @@
         text-decoration: none;
         text-align: center;
         display: inline-block;
+        white-space: nowrap;
       }
 
       .btn-primary {
@@ -170,13 +181,34 @@
       }
 
       .btn-secondary {
-        background: #f7fafc;
+        background: white;
         color: #4a5568;
         border: 1px solid #e2e8f0;
       }
 
       .btn-secondary:hover {
-        background: #edf2f7;
+        background: #f7fafc;
+      }
+
+      .video-info {
+        margin-top: 10px;
+        padding: 10px;
+        background: white;
+        border-radius: 6px;
+        font-size: 12px;
+        color: #718096;
+        border: 1px solid #e2e8f0;
+        word-break: break-all;
+        max-width: 400px;
+      }
+
+      .video-info a {
+        color: #3b82f6;
+        text-decoration: none;
+      }
+
+      .video-info a:hover {
+        text-decoration: underline;
       }
 
       .loading {
@@ -231,11 +263,8 @@
       }
 
       .empty-state {
-        background: white;
         padding: 60px 20px;
-        border-radius: 12px;
         text-align: center;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       }
 
       .empty-state-icon {
@@ -260,16 +289,30 @@
           padding: 10px;
         }
 
+        .container {
+          padding: 20px;
+        }
+
         h1 {
           font-size: 24px;
         }
 
-        .work-orders-grid {
-          grid-template-columns: 1fr;
+        .work-order-content {
+          flex-direction: column;
+          align-items: stretch;
+        }
+
+        .work-order-stats {
+          flex-wrap: wrap;
         }
 
         .work-order-actions {
-          flex-direction: column;
+          margin-left: 0;
+          width: 100%;
+        }
+
+        .btn {
+          flex: 1;
         }
       }
     </style>
@@ -286,7 +329,7 @@
         <div>Loading your work orders...</div>
       </div>
 
-      <div id="workOrdersGrid" class="work-orders-grid"></div>
+      <div id="workOrdersList" class="work-orders-list"></div>
     </div>
 
     <script>
@@ -422,13 +465,13 @@
       }
 
       // ============================================
-      // RENDER WORK ORDERS GRID
+      // RENDER WORK ORDERS LIST
       // ============================================
       function renderWorkOrders() {
-        const grid = document.getElementById("workOrdersGrid");
+        const list = document.getElementById("workOrdersList");
 
         if (workOrders.length === 0) {
-          grid.innerHTML = `
+          list.innerHTML = `
             <div class="empty-state">
               <div class="empty-state-icon">📭</div>
               <div class="empty-state-title">No Work Orders Found</div>
@@ -438,11 +481,11 @@
           return;
         }
 
-        grid.innerHTML = "";
+        list.innerHTML = "";
 
         workOrders.forEach((workOrder) => {
           const card = createWorkOrderCard(workOrder);
-          grid.appendChild(card);
+          list.appendChild(card);
         });
       }
 
@@ -477,8 +520,8 @@
 
         // Show input video URL if available
         const videoInfo = workOrder.inputVideoUrl 
-          ? `<div style="margin-top: 10px; padding: 10px; background: #f7fafc; border-radius: 6px; font-size: 12px; color: #718096;">
-               <strong>Source:</strong> ${workOrder.inputVideoUrl.length > 50 ? workOrder.inputVideoUrl.substring(0, 50) + '...' : workOrder.inputVideoUrl}
+          ? `<div class="video-info">
+               <strong>Source:</strong> <a href="${workOrder.inputVideoUrl}" target="_blank" rel="noopener noreferrer">${workOrder.inputVideoUrl.length > 50 ? workOrder.inputVideoUrl.substring(0, 50) + '...' : workOrder.inputVideoUrl}</a>
              </div>`
           : '';
 
@@ -490,17 +533,18 @@
                <a href="${approvalUrl}" class="btn btn-primary">
                  ✓ Approve Media
                </a>
-             </div>`:``;
+             </div>`
+          : '';
 
         card.innerHTML = `
-          <div class="work-order-header">
-            <div class="work-order-name">${workOrder.name}</div>
-          </div>
-          <div class="work-order-body">
-            <div style="margin-bottom: 15px;">
-              ${statusBadge}
+          <div class="work-order-content">
+            <div class="work-order-info">
+              <div class="work-order-name">${workOrder.name}</div>
+              <div class="work-order-status">
+                ${statusBadge}
+              </div>
+              ${videoInfo}
             </div>
-            ${videoInfo}
             ${actionButtons}
           </div>
         `;
