remove read-only banner

--- a/approval.html
+++ b/approval.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>content Approval Page</title>
+    <title>Content Approval Page</title>
     <style>
       * {
         margin: 0;
@@ -331,10 +331,6 @@
       <p style="color: #666; margin-bottom: 20px">
         Review and approve content
       </p>
-
-      <div id="readOnlyBanner" style="display: none; background: #e0f2fe; border: 2px solid #0ea5e9; border-radius: 8px; padding: 15px; margin-bottom: 20px; color: #0c4a6e;">
-        <strong>ℹ️ Read-Only Mode:</strong> This work order has been approved. You can view the content and their approval status, but cannot make changes.
-      </div>
 
       <div class="stats">
         <div class="stat-item">
